Fixed text overlap wiht attachment input on smaller screens

--- a/src/components/contact-component/styles/ContactComponent.css
+++ b/src/components/contact-component/styles/ContactComponent.css
@@ -21,18 +21,12 @@ hr {
     width: 530px !important;
   }
 
-  .description-container {
+  .description-container,
+  .contact-form-container {
     width: 94% !important ;
     aspect-ratio: 8/7 !important;
     margin: 0 !important;
     margin-bottom: 0.5rem !important;
-  }
-
-  .contact-form-container {
-    width: 94% !important;
-    aspect-ratio: 8/7 !important;
-    margin: 0 !important;
-    margin-top: 0.5rem !important;
   }
 }
 
@@ -174,8 +168,8 @@ hr {
 }
 
 .submit-button.success {
- background-color: var(--gl-lime);
- border-color: var(--gl-dark-lime);
+  background-color: var(--gl-lime);
+  border-color: var(--gl-dark-lime);
 }
 
 .submit-button.error {
@@ -226,37 +220,28 @@ hr {
 
 #file-icon {
   width: 20px;
-}
-
-.attachment-input-container {
-  grid-area: attachment;
-  align-self: center;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-areas: 'label span';
-  align-items: center;
-  width: 100%;
-  height: 50%;
+  margin-left: 5px;
 }
 
 .attachment-input-label {
-  grid-area: label;
+  grid-area: attachment;
   background-color: var(--gl-light-gray);
+  align-self: center;
+  justify-self: start;
+  width: 60%;
+  height: 50%;
   cursor: pointer;
   display: flex;
-  justify-self: start;
   align-items: center;
   justify-content: center;
   padding: 0 0.5rem 0 0.5rem;
-  height: 100%;
   white-space: nowrap;
 }
 
 .chosen-file {
-  grid-area: span;
-  height: 50%;
-  width: 160%;
+  text-align: center;
   overflow: scroll;
+  width: 7rem;
   white-space: nowrap;
   border-right: 1px round black;
 }
